2004-11-08  Andrew Cagney  <cagney@gnu.org>

	GDB 6.3 released.
	* version.in: Bump to version 6.3.

2004-11-08  Andrew Cagney  <cagney@gnu.org>

	* README: Refer to 6.3, not 6.2, update directory listing droppng
	references to intl/ and mmalloc/.
	* PROBLEMS: Refer to 6.3 not 6.2.

	* PROBLEMS: Delete no-longer applicable problems.

2004-11-05  Andrew Cagney  <cagney@gnu.org>

	Backport 2004-10-27 Jim Blandy <jimb@redhat.com>
	* remote.c (fetch_register_using_p): Construct 'p' packet in a
	manner independent of the host byte order.

2004-11-04  Kei Sakamoto  <sakamoto.kei@denesas.com>

	* Makefile.in (m32r-tdep.o): Update dependencies.
	* m32r-tdep.c (m32r_gdbarch_init): Call gdbarch_init_osabi for
	ABI-specific overrides.

2004-11-04  Kei Sakamoto  <sakamoto.kei@denesas.com>

	* m32r-tdep.c (m32r_memory_insert_breakpoint): Remove
	unnecessary parallel execution bit.
	(m32r_memory_remove_breakpoint): Ditto.
	(m32r_breakpoint_from_pc): Update.

2004-11-03  Randolph Chung  <tausq@debian.org>

	* hppa-tdep.c (hppa_frame_cache): Use frame_pc_unwind instead of
	frame_func_unwind to locate the unwind entry.
	(hppa_frame_this_id): Likewise.

2004-11-03  Andrew Cagney  <cagney@gnu.org>

	* gdb/NEWS: Mention internationalization, m32r-*-linux-gnu, 'p'
	packet, obsolete configurations, end-of-life deprecated_registers.

2004-11-02  Mark Kettenis  <kettenis@gnu.org>

	* dwarf2-frame.c (read_encoded_value): Set proper size for signed
	encodings as well as unsigned encodings.

2004-11-02  Paul Hilfinger  <hilfingr@nile.gnat.com>

	* NEWS: GDB understands GNAT Ada.

2004-10-23  Ulrich Weigand  <uweigand@de.ibm.com>

	* s390-tdep.c (enum pv_boolean): Remove.
	(pv_is_array_ref): Remove.
	(s390_on_stack): Remove.
	(S390_NUM_SPILL_SLOTS): Remove.
	(struct s390_prologue_data): Remove members 'spill' and 'back_chain',
	add members 'gpr_slot', 'fpr_slot', and 'back_chain_saved_p'.
	(s390_store): Track all stores of orginal incoming registers to the